--- a/mandelbulber2/formula/ui/transf_difs_chessboard.ui
+++ b/mandelbulber2/formula/ui/transf_difs_chessboard.ui
@@ -163,6 +163,13 @@
     </layout>
    </item>
    <item>
+    <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
+     <property name="text">
+      <string>disable min aux.dist</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledZc_false">
      <property name="toolTip">
       <string/>
